Added tests for case sensitive properties